--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
 
 <!-- Page Title -->
-    <title>Aysha Al-Hafian (Homepage)</title>
+    <title>About Me</title>
 
 <!-- Metadata -->
     <meta charset="UTF-8">
@@ -29,7 +29,7 @@
 
 <body>
     
-    <h1>Aysha Al-Hafian</h1>
+    <h1>About Me</h1>
 
    <nav>
      <ul>
