--- a/portfolio.html
+++ b/portfolio.html
@@ -58,16 +58,16 @@
 
     <div id="gallery-1">
 
-        <a href="https://picsum.photos/800/600?image=100">
-            <img src="https://picsum.photos/100/100?image=100" alt="">
+        <a href="img/BrittanyLogo_5x5_white_nowords copy.png" id="pic">
+            <img src="img/BrittanyLogo_5x5_white_nowords copy.png" alt="">
         </a>
 
-        <a href="https://picsum.photos/800/600?image=100">
-            <img src="https://picsum.photos/100/100?image=100" alt="">
+        <a href="img/Screen Shot 2018-08-04 at 1.18.09 PM.png">
+            <img src="img/Screen Shot 2018-08-04 at 1.18.09 PM.png" alt="">
         </a>
         
         <a href="https://picsum.photos/800/600?image=100">
-            <img src="https://picsum.photos/100/100?image=100" alt="">
+            <img src="img/" alt="">
         </a>
 
     </div>
