--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,6 @@
 
 
     <div id="gallery-1">
-
         <a href="img/BrittanyLogo_5x5_white_nowords copy.png" id="pic">
             <img src="img/BrittanyLogo_5x5_white_nowords copy.png" alt="">
         </a>
@@ -66,10 +65,18 @@
             <img src="img/Screen Shot 2018-08-04 at 1.18.09 PM.png" alt="">
         </a>
         
-        <a href="https://picsum.photos/800/600?image=100">
-            <img src="img/" alt="">
+        <a href="img/mazarati.jpg">
+            <img src="img/mazarati.jpg" alt="">
         </a>
 
+        <a href="img/bookthief.jpg" id="pic">
+            <img src="img/bookthief.jpg" alt="">
+        </a>
+
+        <a href="img/monster2.jpg">
+            <img src="img/monster2.jpg" alt="">
+        </a>
+    </ul>
     </div>
 
 
