--- a/portfolio.html
+++ b/portfolio.html
@@ -73,8 +73,8 @@
             <img src="img/bookthief.jpg" alt="">
         </a>
 
-        <a href="img/monster2.jpg">
-            <img src="img/monster2.jpg" alt="">
+        <a href="img/gracie.jpg">
+            <img src="img/gracie.jpg" alt="">
         </a>
     </ul>
     </div>
