Added Catalog pages

--- a/portfolio.html
+++ b/portfolio.html
@@ -57,28 +57,53 @@
 
 
     <div id="gallery-1">
-        <a href="img/BrittanyLogo_5x5_white_nowords copy.png" id="pic">
-            <img src="img/BrittanyLogo_5x5_white_nowords copy.png" alt="">
+        <a href="img/Catalog_cover.png" id="pic">
+            <img src="img/Catalog_cover.png" alt="">
         </a>
 
-        <a href="img/Screen Shot 2018-08-04 at 1.18.09 PM.png">
-            <img src="img/Screen Shot 2018-08-04 at 1.18.09 PM.png" alt="">
+        <a href="img/Catalog_1:2.png">
+            <img src="img/Catalog_1:2.png" alt="">
         </a>
         
-        <a href="img/mazarati.jpg">
-            <img src="img/mazarati.jpg" alt="">
+        <a href="img/Catalog_3:4.png">
+            <img src="img/Catalog_3:4.png" alt="">
         </a>
 
-        <a href="img/bookthief.jpg" id="pic">
-            <img src="img/bookthief.jpg" alt="">
+        <a href="img/Catalog_5:6.png" id="pic">
+            <img src="img/Catalog_5:6.png" alt="">
         </a>
 
-        <a href="img/gracie.jpg">
-            <img src="img/gracie.jpg" alt="">
+        <a href="img/Catalog_7:8.png">
+            <img src="img/Catalog_7:8.png" alt="">
         </a>
-    </ul>
+
     </div>
 
+    <div id="gallery-2">
+    <a href="img/Catalog_9:10.png">
+        <img src="img/Catalog_9:10.png" alt="">
+    </a>
+
+    <a href="img/Catalog_11:12.png">
+        <img src="img/Catalog_11:12.png" alt="">
+    </a>
+
+    <a href="img/Catalog_13:14.png">
+        <img src="img/Catalog_13:14.png" alt="">
+    </a>
+
+    <a href="img/Catalog_15:16.png">
+        <img src="img/Catalog_15:16.png" alt="">
+    </a>
+
+    <a href="img/Catalog_17:18.png">
+        <img src="img/Catalog_17:18.png" alt="">
+    </a>
+
+    <a href="img/Catalog_back.png">
+        <img src="img/Catalog_back.png" alt="">
+    </a>
+</div>
 
     <!-- jQuery Library via CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
