--- a/index.html
+++ b/index.html
@@ -28,7 +28,21 @@
 </head>
 
 <body>
-    
+  
+    <svg version="1.1" id="mylogo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+    width="2283.1px" height="146.2px" viewBox="0 0 2283.1 146.2" style="enable-background:new 0 0 2283.1 146.2;"
+    xml:space="preserve">
+ <rect y="0.2" style="fill:#418080;" width="2283.1" height="145.7"/>
+ <line style="fill:none;stroke:#FACBCB;stroke-miterlimit:10;" x1="44.2" y1="0.2" x2="128.1" y2="145.9"/>
+ <rect x="59" y="53.1" style="fill:none;" width="33.2" height="30.4"/>
+ <text transform="matrix(1 0 0 1 58.9824 77.1329)" style="fill:#FACBCB; font-family:'WalkwayExpand'; font-size:35.4031px;">A</text>
+ <rect x="73.7" y="47.5" style="fill:none;" width="32.4" height="30.3"/>
+ <text transform="matrix(1 0 0 -1 73.665 53.7325)" style="fill:#FACBCB; font-family:'WalkwayExpand'; font-size:35.4031px;">A</text>
+ <rect x="109.4" y="53.1" style="fill:none;" width="135.8" height="34.4"/>
+ <text transform="matrix(1 0 0 1 109.355 77.149)" style="fill:#FACBCB; font-family:'WalkwayExpand'; font-size:35.4031px;">design</text>
+ </svg>
+
+
     <!-- Navigation -->
     <div class="nav">
             <div class="nav-header">
