--- a/portfolio.html
+++ b/portfolio.html
@@ -86,8 +86,8 @@
             <img src="img/monster2.jpg" alt="">
         </a>
 
-        <a href="img/monster2.jpg" id="pic">
-            <img src="img/monster2.jpg" alt="">
+        <a href="img/gracie.jpg" id="pic">
+            <img src="img/gracie.jpg" alt="">
         </a>
 
         </div>
