--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 <!-- Normalize CSS via CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 <!-- Required Plugin Stylesheets -->    
-    
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <!-- My Awesome Styling -->
     <link rel="stylesheet" href="css/styles.css">
 
