--- a/contact.html
+++ b/contact.html
@@ -46,13 +46,13 @@
     width="2283.1px" height="146.2px" viewBox="0 0 2283.1 146.2" style="enable-background:new 0 0 2283.1 146.2;"
     xml:space="preserve">
  <rect y="0.2" style="fill:#418080;" width="2283.1" height="145.7"/>
- <line style="fill:none;stroke:#FACBCB;stroke-miterlimit:10;" x1="44.2" y1="0.2" x2="128.1" y2="145.9"/>
+ <line style="fill:none;stroke:#c9ac68;stroke-miterlimit:10;" x1="44.2" y1="0.2" x2="128.1" y2="145.9"/>
  <rect x="59" y="53.1" style="fill:none;" width="33.2" height="30.4"/>
- <text transform="matrix(1 0 0 1 58.9824 77.1329)" style="fill:#FACBCB; font-family:'WalkwayExpand'; font-size:35.4031px;">A</text>
+ <text transform="matrix(1 0 0 1 58.9824 77.1329)" style="fill:#c9ac68; font-family:'WalkwayExpand'; font-size:35.4031px;">A</text>
  <rect x="73.7" y="47.5" style="fill:none;" width="32.4" height="30.3"/>
- <text transform="matrix(1 0 0 -1 73.665 53.7325)" style="fill:#FACBCB; font-family:'WalkwayExpand'; font-size:35.4031px;">A</text>
+ <text transform="matrix(1 0 0 -1 73.665 53.7325)" style="fill:#c9ac68; font-family:'WalkwayExpand'; font-size:35.4031px;">A</text>
  <rect x="109.4" y="53.1" style="fill:none;" width="135.8" height="34.4"/>
- <text transform="matrix(1 0 0 1 109.355 77.149)" style="fill:#FACBCB; font-family:'WalkwayExpand'; font-size:35.4031px;">design</text>
+ <text transform="matrix(1 0 0 1 109.355 77.149)" style="fill:#c9ac68; font-family:'WalkwayExpand'; font-size:35.4031px;">design</text>
  </svg>
 
     <!-- Navigation -->
@@ -136,7 +136,7 @@
             <hr>
             <ul class="social-media-list">
               <li><a href="#" target="_blank" class="contact-icon">
-                <i class="fa fa-github" aria-hidden="true"></i></a>
+                <i class="fa fa-facebook" aria-hidden="true"></i></a>
               </li>
               <li><a href="#" target="_blank" class="contact-icon">
                 <i class="fa fa-twitter" aria-hidden="true"></i></a>
@@ -145,7 +145,7 @@
                 <i class="fa fa-instagram" aria-hidden="true"></i></a>
               </li>
               <li><a href="#" target="_blank" class="contact-icon">
-                <i class="fa fa-codepen" aria-hidden="true"></i></a>
+                <i class="fa fa-github" aria-hidden="true"></i></a>
               </li>
             </ul>
             <hr>
