--- a/about.html
+++ b/about.html
@@ -63,10 +63,18 @@
         </div>
       </div>
 
-    <h1>About Me</h1>
+    <h1>Hello, my name is Aysha Al-Hafian</h1>
 
-
-
+    <img class='me' src="img/Portrait_1.png" alt="portrait">
+      <div id='about'>
+        <p class='about'>My name is Aysha Al-Hafian and I am a Jr Graphic Designer. 
+          I recieved my degree in Visual Communications and Design at Eastern Washington University with Honors in March 2019.</p>
+          <p class='about'> I am an artist, developer, photographer and graphic designer located in Spokane, Washington.</p>
+          <p class='about'>I have designed a poster for a local non-profit in Spokane, designed a logo for a client in the horse industry, created fliers and advertisements for a local farm and I have taken on a multitude of drawing commissions. I also designed a reusable tote bag for EWU and am currently working with a group on rebranding Cheney, Washington. </p>
+          <p class='about'>When I am not in class or studying to better my skills, I am typically at my job. I am assistant manager/trainer for Heritage Arabian Farm. When I am not gone at horse shows, I spend most my time giving horseback lessons, riding/training, keeping things maintained, and caring for the horses. 
+          I also like to spend as much time as possible in the outdoors. I am exploring the pnw one trailhead at a time with my dog, Riley. I tend to practice my photography while out on the trails. </p>
+          <p class='about'>I am beyond thrilled to start putting my skills to work. Please feel free to PM me with any questions or requests as my graduation date gets closer. I look forward to working with you! </p>
+        </div>
     
 
 
