--- a/index.html
+++ b/index.html
@@ -64,9 +64,8 @@
             </div>
           </div>
 
-    <h1>Homepage</h1>
+    <h1>Welcome</h1>
 
-    
 
     <!-- jQuery Library via CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
