playing with about page

--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
     <h1>Hello, my name is Aysha Al-Hafian</h1>
 
     <img class='me' src="img/Portrait_1.png" alt="portrait">
-      <div id='about'>
+ 
         <p class='about'>My name is Aysha Al-Hafian and I am a Jr Graphic Designer. 
           I recieved my degree in Visual Communications and Design at Eastern Washington University with Honors in March 2019.</p>
           <p class='about'> I am an artist, developer, photographer and graphic designer located in Spokane, Washington.</p>
@@ -74,8 +74,8 @@
           <p class='about'>When I am not in class or studying to better my skills, I am typically at my job. I am assistant manager/trainer for Heritage Arabian Farm. When I am not gone at horse shows, I spend most my time giving horseback lessons, riding/training, keeping things maintained, and caring for the horses. 
           I also like to spend as much time as possible in the outdoors. I am exploring the pnw one trailhead at a time with my dog, Riley. I tend to practice my photography while out on the trails. </p>
           <p class='about'>I am beyond thrilled to start putting my skills to work. Please feel free to PM me with any questions or requests as my graduation date gets closer. I look forward to working with you! </p>
-        </div>
-    
+          </div>
+      </section>
 
 
     <!-- jQuery Library via CDN -->
