--- a/portfolio.html
+++ b/portfolio.html
@@ -71,16 +71,16 @@
             <img src="img/Catalog_cover.png" alt="">
         </a>
 
-        <a href="img/ballerina.jpg">
-            <img src="img/ballerina.jpg" alt="">
+        <a href="img/cheney.jpg">
+            <img src="img/cheney.jpg" alt="">
         </a>
         
         <a href="img/mazarati.jpg">
             <img src="img/mazarati.jpg" alt="">
         </a>
 
-        <a href="img/monster2.jpg" id="pic">
-            <img src="img/monster2.jpg" alt="">
+        <a href="img/youngselfportrait.jpg">
+            <img src="img/youngselfportrait.jpg" alt="">
         </a>
 
         <a href="img/gracie.jpg" id="pic">
