added to homepage

--- a/index.html
+++ b/index.html
@@ -64,9 +64,14 @@
             </div>
           </div>
 
-    <h1>Welcome</h1>
 
+  <section id="home" class="sec-main">
+    <h1 class="main-heading">“Creativity is nothing but a mind set free.” –Torrie T. Asai</h1>
+  </section>
 
+ <div>
+     <img class='flowerchild' src="img/flowerchild.jpg" alt="flowerchild">
+    </div>
     <!-- jQuery Library via CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- Plugins(s) -->
