playing with about page

--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
     <h1 class="main-heading">“Creativity is nothing but a mind set free.” –Torrie T. Asai</h1>
   </section>
 
+  <div class="box-1">
+        <div class="btn btn-one">
+          <span>Enter Site</span>
+        </div>
+      </div>
+
  <div>
      <img class='flowerchild' src="img/flowerchild.jpg" alt="flowerchild">
     </div>
