--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
 <!-- Page Title -->
-    <title>Homeage</title>
+    <title>Homepage</title>
 
 <!-- Metadata -->
     <meta charset="UTF-8">
@@ -71,13 +71,11 @@
 
   <div class="box-1">
         <div class="btn btn-one">
-          <span>Enter Site</span>
+         <a href="about.html"> <span>Enter Site</span></a> 
         </div>
       </div>
 
- <div>
-     <img class='flowerchild' src="img/flowerchild.jpg" alt="flowerchild">
-    </div>
+
     <!-- jQuery Library via CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- Plugins(s) -->
