--- a/index.html
+++ b/index.html
@@ -64,10 +64,18 @@
             </div>
           </div>
 
-
-  <section id="home" class="sec-main">
-    <h1 class="main-heading">“Creativity is nothing but a mind set free.” –Torrie T. Asai</h1>
-  </section>
+<div style="text-align:center;">
+          <svg version="1.1" id="logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+          width="65.5px" height="77.8px" viewBox="0 0 65.5 77.8" style="enable-background:new 0 0 65.5 77.8;" xml:space="preserve">
+       <path style="fill:none;stroke:#CAAC68;stroke-miterlimit:10;" d="M64.2,71C44.6,83.2,18.9,77.3,6.8,57.8S0.7,12.6,20.3,0.4"/>
+       <g>
+         <path style="fill:#CAAC68;" d="M65.5,22.8L50.6,46.1l-1.9,0L34,22.3l2.4,0l4.6,7.5l17.5,0.3l4.7-7.3L65.5,22.8z M57.4,31.7L42,31.5
+           l7.6,12.3L57.4,31.7z"/>
+       </g>
+       <rect x="18.1" y="22.3" style="fill:none;" width="32.8" height="30"/>
+       <text transform="matrix(1 0 0 1 18.0928 46.0305)" style="fill:#CAAC68; font-family:'WalkwayExpandBold'; font-size:35px;">A</text>
+       </svg>
+      </div>
 
   <div class="box-1">
         <div class="btn btn-one">
