changed button to link

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
 </head>
 
-<body>
+<body class='homepage'>
   
-    <svg version="1.1" id="mylogo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+    <!-- <svg version="1.1" id="mylogo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
     width="2283.1px" height="146.2px" viewBox="0 0 2283.1 146.2" style="enable-background:new 0 0 2283.1 146.2;"
     xml:space="preserve">
  <rect y="0.2" style="fill:#418080;" width="2283.1" height="145.7"/>
@@ -44,7 +44,7 @@
 
 
     <!-- Navigation -->
-    <div class="nav">
+    <!-- <div class="nav">
             <div class="nav-header">
             </div>
             <div class="nav-btn">
@@ -62,7 +62,7 @@
                 <a href="/contact.html">Contact</a>
               
             </div>
-          </div>
+          </div> --> 
 
 <!-- <div style="text-align:center;">
           <svg version="1.1" id="logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -77,11 +77,7 @@
        </svg>
       </div> -->
 
-  <div class="box-1">
-        <div class="btn btn-one">
-         <a href="about.html">Enter Site</a> 
-        </div>
-      </div>
+      <a href="/about.html" class="link link-2">Enter Site</a>
 
 
     <!-- jQuery Library via CDN -->
