--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
           </div> --> 
 
-<div>
+<div class="home_logo">
           <svg version="1.1" id="logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
           width="65.5px" height="77.8px" viewBox="0 0 65.5 77.8" style="enable-background:new 0 0 65.5 77.8;" xml:space="preserve">
        <path style="fill:none;stroke:#CAAC68;stroke-miterlimit:10;" d="M64.2,71C44.6,83.2,18.9,77.3,6.8,57.8S0.7,12.6,20.3,0.4"/>
