not sure why i cant get this

--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
         </div>
       </div>
 
-    <h1>Hello, my name is Aysha Al-Hafian</h1>
+    <!-- <h1>Hello, my name is Aysha Al-Hafian</h1>
 <div>
     <img class='me' src="img/Portrait_1.png" alt="portrait">
  
@@ -76,7 +76,24 @@
           I also like to spend as much time as possible in the outdoors. I am exploring the pnw one trailhead at a time with my dog, Riley. I tend to practice my photography while out on the trails. </p>
           <p class='about'>I am beyond thrilled to start putting my skills to work. Please feel free to PM me with any questions or requests as my graduation date gets closer. I look forward to working with you! </p>
     </div>
-    </div>
+    </div> -->
+
+    <section>
+  
+      <div class="grid-flex">
+        <div class="col col-image">
+    <img src="img/Portrait_1.png" alt="">
+        </div>
+        
+        <div class="col col-text">
+          <div class="Aligner-item">
+            <h2>ABOUT</h2>
+     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium nihil error quae, possimus quam corrupti libero dolores repudiandae blanditiis similique optio accusamus placeat animi consequatur voluptates nobis beatae molestiae voluptatum?</p>
+            </div>
+        </div>
+      </div>
+      </section>
+
 
 
     <!-- jQuery Library via CDN -->
