--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
             </div>
           </div>
     
-          <textarea class="form-control" rows="10" placeholder="MESSAGE" name="message"></textarea>
+          <textarea class="form-control" rows="10" placeholder="So I have an idea..." name="message"></textarea>
           
           <button class="btn btn-primary send-button" id="submit" type="submit" value="SEND">
             <div class="button">
