--- a/portfolio.html
+++ b/portfolio.html
@@ -87,6 +87,18 @@
                 <img src="img/gracie.jpg" alt="">
             </a>
 
+            <a href="img/bookthief.jpg" id="pic">
+                <img src="img/bookthief.jpg" alt="">
+            </a>
+
+            <a href="img/Screen Shot 2018-08-04 at 1.18.09 PM.png" id="pic">
+                <img src="img/Screen Shot 2018-08-04 at 1.18.09 PM.png" alt="">
+            </a>
+
+            <a href="img/BrittanyLogo_5x5_white_nowords copy.png" id="pic">
+                <img src="img/BrittanyLogo_5x5_white_nowords copy.png" alt="">
+            </a>
+
             </div> 
 
 
