getting stuff DONE

--- a/contact.html
+++ b/contact.html
@@ -79,6 +79,7 @@
     <section id="contact">
   
       <h1 class="section-header">CONTACT</h1>
+      <h4 class="subsection">Have an Idea? A Question? Want to know more? Send me message! </h4>
       
       <div class="contact-wrapper">
         
