--- a/portfolio.html
+++ b/portfolio.html
@@ -99,6 +99,22 @@
                 <img src="img/BrittanyLogo_5x5_white_nowords copy.png" alt="">
             </a>
 
+            <a href="img/ValleySlam_PosterMockup.jpg" id="pic">
+                <img src="img/ValleySlam_PosterMockup.jpg" alt="">
+            </a>
+
+            <a href="img/InauguralSlam_PosterMockup.jpg" id="pic">
+                <img src="img/InauguralSlam_PosterMockup.jpg" alt="">
+            </a>
+
+            <a href="img/NorthernSlam_PosterMockup.jpg" id="pic">
+                <img src="img/NorthernSlam_PosterMockup.jpg" alt="">
+            </a>
+
+            <a href="img/PES_totebag.jpg" id="pic">
+                <img src="img/PES_totebag.jpg" alt="">
+            </a>
+
             </div> 
 
 
@@ -113,8 +129,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- Plugins(s) -->
     <script src="/js/lightgallery-all.min.js"></script>  
-    <script src="js/lg-thumbnail.min.js"></script>
-    <script src="js/lg-fullscreen.min.js"></script>
+   
     <!-- My Scripts -->
     <script src="js/scripts.js"></script>
 </body>
