--- a/contact.html
+++ b/contact.html
@@ -133,16 +133,16 @@
     
             <hr>
             <ul class="social-media-list">
-              <li><a href="#" target="_blank" class="contact-icon">
+              <li><a href="https://www.facebook.com/ayshaAart/" target="_blank" class="contact-icon">
                 <i class="fa fa-facebook" aria-hidden="true"></i></a>
               </li>
-              <li><a href="#" target="_blank" class="contact-icon">
-                <i class="fa fa-twitter" aria-hidden="true"></i></a>
+              <li><a href="https://www.linkedin.com/in/aysha-al-hafian-8600b8183/" target="_blank" class="contact-icon">
+                <i class="fa fa-linkedin" aria-hidden="true"></i></a>
               </li>
-              <li><a href="#" target="_blank" class="contact-icon">
+              <li><a href="https://www.instagram.com/ayshaalhafian_design/" target="_blank" class="contact-icon">
                 <i class="fa fa-instagram" aria-hidden="true"></i></a>
               </li>
-              <li><a href="#" target="_blank" class="contact-icon">
+              <li><a href="https://github.com/AyshaA1997?tab=repositories" target="_blank" class="contact-icon">
                 <i class="fa fa-github" aria-hidden="true"></i></a>
               </li>
             </ul>
